<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/detail_phone_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textSize="25sp"
        android:textAlignment="center"
        android:text="@string/dummy_samsumg_galaxy_s9_120gb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/detail_phone_image"
        android:layout_width="225dp"
        android:layout_height="253dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/phone_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_phone_name"
        tools:srcCompat="@tools:sample/avatars" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/detail_phone_image"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/detail_phone_image"
        app:layout_constraintTop_toTopOf="@+id/detail_phone_image"
        app:layout_constraintVertical_bias="0.508">

        <TextView
            android:id="@+id/detail_last_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/antes_117_225" />

        <TextView
            android:id="@+id/detail_price"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ahora_78_667" />

        <TextView
            android:id="@+id/detail_credit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:textSize="12sp"
            android:text="@string/acepta_credito"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/detail_credit_card_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            tools:srcCompat="@drawable/ic_credit_card"
            android:contentDescription="@string/credit_card_icon"/>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="8dp"
        android:padding="@dimen/cardview_compat_inset_shadow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailRelativeLayout">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/detail_phone_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/descripcion"
                    android:textSize="17sp" />


            </LinearLayout>


        </ScrollView>


    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:id="@+id/detailRelativeLayout"
        android:layout_width="212dp"
        android:layout_height="27dp"
        android:layout_marginTop="16dp"
        android:background="@color/primary_light"
        android:backgroundTint="@color/primary"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_phone_image">


        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/textView13"
            android:contentDescription="@string/mail_icon"
            app:srcCompat="@drawable/ic_mail" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="6dp"
            android:text="@string/contactar_area_de_ventas"

            android:textStyle="bold" />
    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>